--- a/concepttest-app/public/views/nav.html
+++ b/concepttest-app/public/views/nav.html
@@ -1,4 +1,22 @@
 <nav class="site-nav clearfix" role="navigation" collapse-nav-accordion highlight-active>
+ <div class="nav-title panel-heading"><i>Mis opciones</i></div>
+ <ul class="list-unstyled nav-list">
+  <li>
+   <a href="#javascript:;">
+  <i class="fa fa-slideshare icon"></i>
+  <span class="text">Evaluaciones</span>
+  <i class="arrow fa fa-angle-right right"></i>
+   </a>
+   <ul class="inner-drop list-unstyled">
+    <li class="">
+     <a href="#/user/myTests">
+      <i class="fa fa-slideshare icon"></i>
+      Mis evaluaciones
+     </a>
+    </li>
+   </ul>
+  </li>
+</ul>
  <div class="nav-title panel-heading"><i>Administraci&oacute;n</i></div>
  <ul class="list-unstyled nav-list">
   <li>
@@ -7,7 +25,7 @@
 	<span class="text">Evaluaciones</span>
 	<i class="arrow fa fa-angle-right right"></i>
    </a>
-   <ul style="display: block;" class="inner-drop list-unstyled">
+   <ul class="inner-drop list-unstyled">
     <li class="">
      <a href="#/admin/manageTests">
       <i class="fa fa-slideshare icon"></i>
