--- a/concepttest-app/public/views/admin/editTest.html
+++ b/concepttest-app/public/views/admin/editTest.html
@@ -116,6 +116,7 @@
         </div>
 
         <div class="form-group clearfix right">
+         <button type="button" class="btn btn-default" ng-click="cancel()">Cancelar</button>
          <button type="button" class="btn btn-default right" ng-click="toConfiguration(1)" ng-disabled="newTestForm.name.$invalid">Siguiente</button>
         </div>
 
@@ -150,6 +151,7 @@
          <div class="form-group clearfix right">
           <button type="button" class="btn btn-default mr5" ng-click="stepNext(0)">Anterior</button>
           <button type="button" class="btn btn-default" ng-click="preview()">Previsualizar</button>
+          <button type="button" class="btn btn-default" ng-click="cancel()">Cancelar</button>
           <button type="submit" class="btn btn-default" aria-hidden="true" ng-disabled="editTestForm.name.$invalid">Editar</button>
          </div>
         </div>
